// SPDX-License-Identifier: MIT

syntax = "proto2";

import "opts.proto";
import "fown.proto";

message memfd_secret_file_entry {
        required uint32		id		= 1;
	required uint32		flags		= 2 [(criu).flags = "rfile.flags"];
	required uint64		pos		= 3;
	required fown_entry	fown		= 4;
	required uint32		inode_id	= 5;
};

message memfd_secret_inode_entry {
        required uint32 uid = 1;
        required uint32 gid = 2;
        required uint64 size = 3;
        required uint32 secretmem_id = 4;
        required uint64 inode_id = 5;
};
